Adding NuSpec and adding DeployR.NetClient and Json.Net as NuGet dependency.

--- a/.gitignore
+++ b/.gitignore
@@ -24,4 +24,10 @@
 *.esproj
 *.sublime-workspace
 *.sublime-project
+*.suo
 
+
+src/DeployRBroker/bin/
+src/DeployRBroker/obj/
+src/packages/
+src/DeployRBroker/DeployRBroker.xml
