--- a/src/DeployRBroker/DeployRBroker.csproj
+++ b/src/DeployRBroker/DeployRBroker.csproj
@@ -9,8 +9,8 @@
     <OutputType>Library</OutputType>
     <AppDesignerFolder>Properties</AppDesignerFolder>
     <RootNamespace>DeployRBroker</RootNamespace>
-    <AssemblyName>DeployRBroker8.0.5</AssemblyName>
-    <TargetFrameworkVersion>v4.5.1</TargetFrameworkVersion>
+    <AssemblyName>DeployRBroker</AssemblyName>
+    <TargetFrameworkVersion>v4.5.2</TargetFrameworkVersion>
     <FileAlignment>512</FileAlignment>
     <FileUpgradeFlags>
     </FileUpgradeFlags>
@@ -87,8 +87,13 @@
     <Prefer32Bit>false</Prefer32Bit>
   </PropertyGroup>
   <ItemGroup>
-    <Reference Include="DeployR8.0.5">
-      <HintPath>..\..\..\dotnet-client-library\src\bin\Debug\DeployR8.0.5.dll</HintPath>
+    <Reference Include="DeployR, Version=8.0.5.10, Culture=neutral, PublicKeyToken=33a36bb775756baf, processorArchitecture=MSIL">
+      <HintPath>..\packages\DeployR.NetClient.8.0.5.10\lib\net452\DeployR.dll</HintPath>
+      <Private>True</Private>
+    </Reference>
+    <Reference Include="Newtonsoft.Json, Version=8.0.0.0, Culture=neutral, PublicKeyToken=30ad4fe6b2a6aeed, processorArchitecture=MSIL">
+      <HintPath>..\packages\Newtonsoft.Json.8.0.3\lib\net45\Newtonsoft.Json.dll</HintPath>
+      <Private>True</Private>
     </Reference>
     <Reference Include="System" />
     <Reference Include="System.Core">
@@ -147,9 +152,6 @@
     <Compile Include="TaskStorageOptions.cs" />
   </ItemGroup>
   <ItemGroup>
-    <WCFMetadata Include="Service References\" />
-  </ItemGroup>
-  <ItemGroup>
     <BootstrapperPackage Include="Microsoft.Net.Client.3.5">
       <Visible>False</Visible>
       <ProductName>.NET Framework 3.5 SP1 Client Profile</ProductName>
@@ -168,6 +170,10 @@
   </ItemGroup>
   <ItemGroup>
     <None Include="DeployRBroker.snk" />
+    <None Include="packages.config" />
+  </ItemGroup>
+  <ItemGroup>
+    <None Include="DeployRBroker.nuspec" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
